Customize JDK by jlink